# pinecone

./: pyproject.toml
scripts/: create_index.py  ingest.py  upsert_vectors.py
