[tool.poetry]
name = "pinecone"
version = "0.1.0"
description = "Pinecone tutorial"
authors = ["Preethi Prakash <Preethi93@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pinecone-client = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
